--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,13 +7,20 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
+	name: Test
     runs-on: macos-latest
+    strategy:
+		matrix:
+			destination: ['platform=iOS Simulator,OS=13.0,name=iPhone X']
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+		-name: Checkout
+		uses: actions/checkout@master
+		-name: Build and test
+		run: |
+		cd TicTacToe
+		xcodebuild clean test -project TicTacToe.xcodeproj -scheme TicTacToe -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+		bash <(curl -s https://codecov.io/bash)
+		env:
+		destination: ${{ matrix.destination }}
