--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,19 +8,18 @@ on:
 
 jobs:
   test:
-	name: Test
-    runs-on: macos-latest
+    name: Test
+    runs-on: macOS-latest
     strategy:
-		matrix:
-			destination: ['platform=iOS Simulator,OS=13.0,name=iPhone X']
-
+        matrix:
+          destination: ['platform=iOS Simulator,OS=13.0,name=iPhone X']
     steps:
-		-name: Checkout
-		uses: actions/checkout@master
-		-name: Build and test
-		run: |
-		cd TicTacToe
-		xcodebuild clean test -project TicTacToe.xcodeproj -scheme TicTacToe -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-		bash <(curl -s https://codecov.io/bash)
-		env:
-		destination: ${{ matrix.destination }}
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Build and test
+        run: |
+          cd TicTacToe
+          xcodebuild clean test -project TicTacToe.xcodeproj -scheme TicTacToe -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          bash <(curl -s https://codecov.io/bash)
+        env: 
+         destination: ${{ matrix.destination }}
