--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
         matrix:
-          destination: ['platform=iOS Simulator,OS=13.0,name=iPhone X']
+          destination: ['platform=iOS Simulator,OS=13.3,name=iPhone 8', 'platform=iOS Simulator,OS=13.3,name=iPhone 8 Plus', 'platform=iOS Simulator,OS=13.3,name=iPhone 11', 'platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro', 'platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro Max']
     steps:
       - name: Checkout
         uses: actions/checkout@master
