--- a/.github/workflows/WIP Branch.yml
+++ b/.github/workflows/WIP Branch.yml
@@ -15,7 +15,9 @@ jobs:
           destination: ['platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro']
     steps:
       - name: Checkout
-        uses: actions/checkout@WIP
+      - uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
       - name: Build and test
         run: |
           xcodebuild clean test -project TicTacToe.xcodeproj -scheme TicTacToe -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
