--- a/.github/workflows/WIP.yml
+++ b/.github/workflows/WIP.yml
@@ -16,9 +16,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Build and test
-        run: |
-          xcodebuild clean test -project TicTacToe.xcodeproj -scheme TicTacToe -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-          bash <(curl -s https://codecov.io/bash)
-        env: 
-         destination: ${{ matrix.destination }}
+      - name: Build Project
+        run: xcodebuild clean build-for-testing -scheme TicTacToe -destination "${destination}"
+      - name: Run Tests
+        run: xcodebuild test-without-building -scheme TicTacToe -destination "${destination}"
