--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: Master UI/Unit Tests
 
 on:
   push:
@@ -8,17 +8,17 @@ on:
 
 jobs:
   test:
-    name: Test
+    name: Build and Test for "${{matrix.destination}}"
     runs-on: macOS-latest
     strategy:
         matrix:
           destination: ['platform=iOS Simulator,OS=13.3,name=iPhone 8', 'platform=iOS Simulator,OS=13.3,name=iPhone 8 Plus', 'platform=iOS Simulator,OS=13.3,name=iPhone 11', 'platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro', 'platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro Max']
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: Build and test
-        run: |
-          xcodebuild clean test -project TicTacToe.xcodeproj -scheme TicTacToe -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-          bash <(curl -s https://codecov.io/bash)
-        env: 
-         destination: ${{ matrix.destination }}
+	steps:
+	- name: Checkout
+	  uses: actions/checkout@master
+	- name: Build Project
+	  run: xcodebuild clean build-for-testing -scheme TicTacToe -destination "${{matrix.destination}}"
+	- name: Run Unit Tests
+	  run: xcodebuild test-without-building -scheme TicTacToe -destination "${{matrix.destination}}" -only-testing TicTacToeTests
+	- name: Run UI Tests
+	  run: xcodebuild test-without-building -scheme TicTacToe -destination "${{matrix.destination}}" -only-testing TicTacToeUITests
