[fix] Update workflows again

--- a/.github/workflows/MasterWorkflow.yml
+++ b/.github/workflows/MasterWorkflow.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Build Project
         run: xcodebuild clean build-for-testing -scheme EZTicTacToe -destination "${{matrix.destination}}"
       - name: Run Unit Tests
-        run: xcodebuild test-without-building -scheme EZTicTacToe -destination "${{matrix.destination}}" -only-testing TicTacToeTests
+        run: xcodebuild test-without-building -scheme EZTicTacToe -destination "${{matrix.destination}}" -only-testing EZTicTacToeTests
       - name: Run UI Tests
-        run: xcodebuild test-without-building -scheme EZTicTacToe -destination "${{matrix.destination}}" -only-testing TicTacToeUITests
+        run: xcodebuild test-without-building -scheme EZTicTacToe -destination "${{matrix.destination}}" -only-testing EZTicTacToeUITests
