[fix] Fix workflows again

--- a/.github/workflows/MasterWorkflow.yml
+++ b/.github/workflows/MasterWorkflow.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Build Project
-        run: xcodebuild clean build-for-testing -scheme EZ Tic Tac Toe -destination "${{matrix.destination}}"
+        run: xcodebuild clean build-for-testing -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}"
       - name: Run Unit Tests
-        run: xcodebuild test-without-building -scheme EZ Tic Tac Toe -destination "${{matrix.destination}}" -only-testing EZTicTacToeTests
+        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing EZTicTacToeTests
       - name: Run UI Tests
-        run: xcodebuild test-without-building -scheme EZ Tic Tac Toe -destination "${{matrix.destination}}" -only-testing EZTicTacToeUITests
+        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing EZTicTacToeUITests
