--- a/.github/workflows/WIP.yml
+++ b/.github/workflows/WIP.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Build Project
         run: xcodebuild clean build-for-testing -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}"
       - name: Run Unit Tests
-        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing EZ_Tic_Tac_Toe_Tests
+        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeTests"
       - name: Run UI Tests
-        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing EZ_Tic_Tac_ToeUITests
+        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeUITests"
