--- a/.github/workflows/WIP.yml
+++ b/.github/workflows/WIP.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
         matrix:
-            destination: ['platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro']
+            destination: ['platform=iOS Simulator,name=iPhone 11 Pro']
     steps:
       - name: Checkout
         uses: actions/checkout@master
