--- a/.github/workflows/MainWorkflow.yml
+++ b/.github/workflows/MainWorkflow.yml
@@ -5,18 +5,64 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    name: Build and Test
+  build:
+    name: Build Project
     runs-on: macOS-latest
-    strategy:
-        matrix:
-            destination: ['platform=iOS Simulator,name=iPad (8th generation)', 'platform=iOS Simulator,name=iPad Air (4th generation)', 'platform=iOS Simulator,name=iPad Pro (9.7-inch)', 'platform=iOS Simulator,name=iPad Pro (11-inch) (2nd generation)', 'platform=iOS Simulator,name=iPad Pro (12.9-inch) (4th generation)', 'platform=iOS Simulator,name=iPhone 8', 'platform=iOS Simulator,name=iPhone 8 Plus', 'platform=iOS Simulator,name=iPhone 11', 'platform=iOS Simulator,name=iPhone 11 Pro', 'platform=iOS Simulator,name=iPhone 11 Pro Max', 'platform=iOS Simulator,name=iPhone 12', 'platform=iOS Simulator,name=iPhone 12 Pro', 'platform=iOS Simulator,name=iPhone 12 Pro Max', 'platform=iOS Simulator,name=iPhone 12 mini', 'platform=iOS Simulator,name=iPhone SE (2nd generation)']
     steps:
     - name: Checkout
       uses: actions/checkout@main
     - name: Build Project
-      run: xcodebuild clean build-for-testing -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}"
+      run: |
+        xcodebuild clean build-for-testing -scheme "EZ Tic Tac Toe" \
+          -destination 'platform=iOS Simulator,name=iPad (8th generation)' \
+          -destination 'platform=iOS Simulator,name=iPad Air (4th generation)' \
+          -destination 'platform=iOS Simulator,name=iPad Pro (9.7-inch)' \
+          -destination 'platform=iOS Simulator,name=iPad Pro (11-inch) (2nd generation)' \
+          -destination 'platform=iOS Simulator,name=iPad Pro (12.9-inch) (4th generation)' \
+          -destination 'platform=iOS Simulator,name=iPhone 8' \
+          -destination 'platform=iOS Simulator,name=iPhone 8 Plus' \
+          -destination 'platform=iOS Simulator,name=iPhone 11' \
+          -destination 'platform=iOS Simulator,name=iPhone 11 Pro' \
+          -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max' \
+          -destination 'platform=iOS Simulator,name=iPhone 12' \
+          -destination 'platform=iOS Simulator,name=iPhone 12 Pro' \
+          -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max' \
+          -destination 'platform=iOS Simulator,name=iPhone 12 mini' \
+          -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation)'
+    - name: Cache build
+      uses: actions/cache@v2
+      with:
+        path: ~/Library/Developer/Xcode/DerivedData
+        key: "$GITHUB_SHA"
+  unit-tests:
+    name: Run Unit Tests
+    runs-on: macOS-latest
+    needs: build
+    steps:
+    - name: Checkout
+      uses: actions/checkout@main
+    - name: Load build from cache
+      uses: actions/cache@v2
+      with:
+        path: ~/Library/Developer/Xcode/DerivedData
+        key: "$GITHUB_SHA"
     - name: Run Unit Tests
-      run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeTests"
+      run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination 'platform=iOS Simulator,name=iPhone 12 Pro' -only-testing "EZ Tic Tac ToeTests"
+
+  ui-tests:
+    name: Run UI Tests
+    runs-on: macOS-latest
+    needs: build
+    strategy:
+        matrix:
+            destination: ['platform=iOS Simulator,name=iPad (8th generation)','platform=iOS Simulator,name=iPad Air (4th generation)','platform=iOS Simulator,name=iPad Pro (9.7-inch)','platform=iOS Simulator,name=iPad Pro (11-inch) (2nd generation)','platform=iOS Simulator,name=iPad Pro (12.9-inch) (4th generation)','platform=iOS Simulator,name=iPhone 8','platform=iOS Simulator,name=iPhone 8 Plus','platform=iOS Simulator,name=iPhone 11','platform=iOS Simulator,name=iPhone 11 Pro','platform=iOS Simulator,name=iPhone 11 Pro Max','platform=iOS Simulator,name=iPhone 12','platform=iOS Simulator,name=iPhone 12 Pro','platform=iOS Simulator,name=iPhone 12 Pro Max','platform=iOS Simulator,name=iPhone 12 mini','platform=iOS Simulator,name=iPhone SE (2nd generation)']
+    steps:
+    - name: Checkout
+      uses: actions/checkout@main
+    - name: Load build from cache
+      uses: actions/cache@v2
+      with:
+        path: ~/Library/Developer/Xcode/DerivedData
+        key: "$GITHUB_SHA"
     - name: Run UI Tests
       run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeUITests"
