CI: Add new triggers
* Push to main
* Manual dispatch

--- a/.github/workflows/MainWorkflow.yml
+++ b/.github/workflows/MainWorkflow.yml
@@ -1,8 +1,11 @@
 name: Main UI/Unit Tests
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
