--- a/.github/workflows/WIP.yml
+++ b/.github/workflows/WIP.yml
@@ -1,24 +1,24 @@
-name: WIP UI/Unit Tests
-
-on:
-  push:
-    branches: [ WIP ]
-  pull_request:
-    branches: [ WIP ]
-
-jobs:
-  test:
-    name: Build and Test
-    runs-on: macOS-latest
-    strategy:
-        matrix:
-            destination: ['platform=iOS Simulator,name=iPhone 12 Pro']
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: Build Project
-        run: xcodebuild clean build-for-testing -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}"
-      - name: Run Unit Tests
-        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeTests"
-      - name: Run UI Tests
-        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeUITests"
+#name: WIP UI/Unit Tests
+#
+#on:
+#  push:
+#    branches: [ WIP ]
+#  pull_request:
+#    branches: [ WIP ]
+#
+#jobs:
+#  test:
+#    name: Build and Test
+#    runs-on: macOS-latest
+#    strategy:
+#        matrix:
+#            destination: ['platform=iOS Simulator,name=iPhone 12 Pro']
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@master
+#      - name: Build Project
+#        run: xcodebuild clean build-for-testing -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}"
+#      - name: Run Unit Tests
+#        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeTests"
+#      - name: Run UI Tests
+#        run: xcodebuild test-without-building -scheme "EZ Tic Tac Toe" -destination "${{matrix.destination}}" -only-testing "EZ Tic Tac ToeUITests"
